# p2p-im-system

./: .gitignore  AGENTS.md  HEARTBEAT.md  IDENTITY.md  README.md  SOUL.md  TOOLS.md  USER.md  _count_code.ps1  _simple_count.ps1  add_roadmap_features.py  add_roadmap_features_fixed.py  agent_prompts.md  analyze_status.py  check_dirs.py  code_monitor_final.py  code_statistics.json  code_statistics_workflow.md  count_code.ps1  count_code.py  count_status.py  count_status2.py  count_status3.py  debug_env.py  developer_agent_optimized.md  developer_agent_simplified.txt  development_plan.md  extract_csv.py  extract_csv_optimized.py  extract_features.sh  extracted_data.csv  feature_changelog.md  filter_data.py  filter_data_optimized.py  filtered_5min.csv  fix_env.py  git_test_file.md  learn_distributed_db.py  learn_mq.py  learn_msg_storage.py  (+46 more)
im-backend/: AiFrontendFrameworkEntity.java  AiFrontendFrameworkRepository.java  AiFrontendFrameworkService.java  DEV_PROGRESS.md  Dockerfile.native  MIGRATION_PLAN.md  MIGRATION_REPORT_2026-04-04.md  MIGRATION_STATS.md  MIGRATION_SUMMARY.md  PROTOBUF_README.md  TEST_COMPLETION_REPORT.md  TEST_PLAN.md  UNIT_TEST_PLAN.md  WEBSOCKET_STATS.txt  auth_code_stat.py  count_websocket.py  dev-log-301.txt  dev_log_2026-03-28_2018.md  docker-compose.test.yml  im-service-auth-code-stats.json  pom-protobuf.xml  pom.xml  session_summary_2026-03-28_2026.md  start-test-env.sh  (+1 more)
im-desktop/src-tauri/: Cargo.toml
im-desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs
im-desktop/src-tauri/src/services/: auth.rs  chat.rs  mod.rs  websocket.rs
(+4044 files in other folders)
